# mock

./: .gitignore  mkdocs.yml  plotly_confusion_matrix.ipynb  pyproject.toml
.github/workflows/: ci.yml  release.yaml
docs/: README.md  api.md
src/mock/: __init__.py  mock.py
tests/: test_mock.py
