[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock"
version = "0.1.0"
description = "A mock project"
authors = [
    { name = "ss249tp", email = "ss249.tp@gmail.com" }
]
readme = "docs/README.md"
keywords = ["GitHub", "DevOps", "Documentation", "CI", "CD"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/ss249tp/mock"
Documentation = "https://about.readthedocs.com/"
Issues = "https://github.com/ss249tp/mock/issues"

[dependency-groups]
dev = [
    "ipykernel",
    "mkdocs-material",
    "mkdocstrings-python",
]
