[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock"]

[project]
name = "ss249tp-mock"
version = "0.1.1"
description = "A mock Python package"
authors = [
    { name = "ss249tp", email = "ss249.tp@gmail.com" }
]
readme = "docs/README.md"
keywords = ["GitHub", "DevOps", "Documentation", "CI", "CD"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/ss249tp/mock"
Documentation = "https://ss249tp-mock.readthedocs.io"
Issues = "https://github.com/ss249tp/mock/issues"

[dependency-groups]
dev = [
    "ipykernel",
    "mkdocs-material",
    "mkdocstrings-python",
    "pytest",
    "pytest-cov",
]
